# CSHack

./: .gitignore  CMakeLists.txt  markers.cpp  stitcher.cpp  stitching_detailed.cpp
AndroidApplication/app/: build.gradle  proguard-rules.pro
AndroidApplication/app/src/androidTest/java/com/example/muzdima/myapplication/: ExampleInstrumentedTest.java
AndroidApplication/app/src/main/: AndroidManifest.xml
AndroidApplication/app/src/main/java/com/example/muzdima/myapplication/: MainActivity.java
AndroidApplication/app/src/main/res/layout/: activity_main.xml  content_main.xml
AndroidApplication/app/src/main/res/menu/: menu_main.xml
AndroidApplication/app/src/test/java/com/example/muzdima/myapplication/: ExampleUnitTest.java
AndroidApplication/gradle/wrapper/: gradle-wrapper.properties
sphere/: 3dlook.blend  3dlook.mtl  goncharuk.mtl  main.cpp  sdobnikov.mtl  sphere.pro  tcpserver.cpp  tcpserver.h  udpserver.cpp  udpserver.h
sphere/models/: goncharuk.blend  sdobnikov.blend
